<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MapTestApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="map_button">Map of Restaurants</string>
    <string name="list_button">List of Restaurants</string>
    <string name="map_view">Map</string>
    <string name="list_view">List</string>
    <string name="home_button">Home</string>
    <string name="back_button">Back</string>
    <string name="account_button">My Account</string>
    <string name="login_button">Login/Logout</string>
    <string name="logout_button">Logout</string>
    <string name="register_button">Register</string>
    <string name="review_button">Add Restaurant</string>
    <string name="location_button">Save Location</string>
    <string name="favourites_button">My Favourites</string>
    <string name="my_reviews_button">My Reviews</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="restaurant_phone">Restaurant Phone</string>
    <string name="restaurant_email">Restaurant Email</string>
	<string name="restaurant_image">Picture of Restaurant</string>
	<string name="review_header">Peer Reviews</string>
    
    <style name="ButtonText">
    <item name="android:layout_width">fill_parent</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="android:textColor">#ffffff</item>
    <item name="android:gravity">center</item>
    <item name="android:layout_margin">3dp</item>
    <item name="android:textSize">30sp</item>
    <item name="android:textStyle">bold</item>
    <item name="android:shadowColor">#000000</item>
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">2</item>
</style>

</resources>