<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/review_info"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.00"
        android:padding="18dip"
        android:text="@string/restaurant_name"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:onClick="onClick"
            android:text="@string/back_button" >
        </Button>

        <Button
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:onClick="onClick"
            android:text="@string/home_button" >
        </Button>

        <Button
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:onClick="onClick"
            android:text="@string/map_view" >
        </Button>

        <Button
            android:id="@+id/list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:onClick="onClick"
            android:text="@string/list_view" >
        </Button>
    </LinearLayout>

</LinearLayout>