<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <TextView
        android:id="@+id/restaurant_name" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="My Favourite Restaurants"  
        android:padding="6dip"/>	

    <ListView
	 	android:id="@id/android:list"
	    android:layout_width="fill_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	 	android:drawSelectorOnTop="false" />

	<LinearLayout 
    android:id="@+id/LinearLayout02" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent">
    	<Button 
    	    android:id="@+id/back_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25" 
	        android:text="@string/back_button"
	        android:onClick="onClick">
	    </Button>
    	<Button 
    	    android:id="@+id/menu_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25" 
	        android:text="@string/home_button"
	        android:onClick="onClick">
	    </Button>
	    <Button 
	        android:id="@+id/map_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25" 
	        android:text="@string/map_view"
	        android:onClick="onClick">
	    </Button>
	    <Button 
	        android:id="@+id/list_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25"
	        android:text="@string/list_view"
	        android:onClick="onClick">
	     </Button>
	</LinearLayout>

</LinearLayout>