<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="CHANGE USERNAME"
        android:textSize="25dip"
        android:textStyle="bold" />
    <!-- Name Label -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Username" />
    <!-- Name TextField -->

    <EditText
        android:id="@+id/registerName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <!--  Error message -->
    <TextView android:id="@+id/username_error"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#e30000"
        android:padding="10dip"
        android:textStyle="bold"/>

    <!-- Login Button -->

    <Button
        android:id="@+id/btnChange"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:text="Change Username" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.85"
        android:text="" />

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:onClick="onClick"
            android:text="@string/back_button" >
        </Button>

        <Button
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:onClick="onClick"
            android:text="@string/home_button" >
        </Button>

        <Button
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:onClick="onClick"
            android:text="@string/map_view" >
        </Button>

        <Button
            android:id="@+id/list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:onClick="onClick"
            android:text="@string/list_view" >
        </Button>
    </LinearLayout>

</LinearLayout>