<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/LinearLayout03" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >
        <!--  View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="LOGIN"
            android:textSize="25sp"
            android:textStyle="bold" />
        <!--  Email Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Username" />
        <!--  Email TextField -->
        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:inputType="text"/>
 
        <!--  Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="Password" />
        <!--  Password TextField -->
        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true" 
            android:inputType="text"/>
 
        <!--  Error message -->
        <TextView android:id="@+id/login_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>
 
        <!--  Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="Login" />
 
        <!--  Link to Registration Screen -->
        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:text="I don&apos;t have account. Register Me!"
            android:textStyle="bold" />
    </LinearLayout>
 
</ScrollView>

<LinearLayout 
    android:id="@+id/LinearLayout03" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent"
    android:layout_alignParentBottom = "true">
    	<Button 
    	    android:id="@+id/back_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25" 
	        android:text="@string/back_button"
	        android:onClick="onClick">
	    </Button>
    	<Button 
    	    android:id="@+id/menu_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25" 
	        android:text="@string/home_button"
	        android:onClick="onClick">
	    </Button>
	    <Button 
	        android:id="@+id/map_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25" 
	        android:text="@string/map_view"
	        android:onClick="onClick">
	    </Button>
	    <Button 
	        android:id="@+id/list_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25"
	        android:text="@string/list_view"
	        android:onClick="onClick">
	     </Button>
	</LinearLayout>
	</RelativeLayout>
	