<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_above="@+id/LinearLayout03" >
 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >
        <!--  View Title Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="REGISTER"
            android:textSize="25dip"
            android:textStyle="bold" />
        <!--  Name Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Username" />
        <!--  Name TextField -->
        <EditText
            android:id="@+id/registerName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <!--  Error message -->
        <TextView android:id="@+id/username_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>
 
        <!--  Email Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Email" />
        <!--  Email TextField -->
        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        
        <!--  Error message -->
        <TextView android:id="@+id/email_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>
 
        <!--  Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="Password" />
        <!--  Password TextField -->
        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true" />
        
        <!--  Password Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:text="Confirm Password" />
        <!--  Password TextField -->
        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true" />
        
        <!--  Error message -->
        <TextView android:id="@+id/password_error"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#e30000"
             android:padding="10dip"
             android:textStyle="bold"/>
 
 
        <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal">

	        <CheckBox
	            android:id="@+id/wheatCheck"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Wheat Allergy" 
	            android:layout_weight="1"/>
	
	        <CheckBox
	            android:id="@+id/glutenCheck"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Gluten Allergy" 
	            android:layout_weight="1"/>
	        
	     </LinearLayout>
	     
	     <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal" >
        
	        <CheckBox
	            android:id="@+id/dairyCheck"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Dairy Allergy" 
	            android:layout_weight="1"/>
	
	        <CheckBox
	            android:id="@+id/nutCheck"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="Nut Allergy" 
	            android:layout_weight="1"/>
	        
        </LinearLayout>
        
	     <!--  Error message -->
        <TextView android:id="@+id/register_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#e30000"
                    android:padding="10dip"
                    android:textStyle="bold"/>

        <!--  Login Button -->
        
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="Register" />
 
        <!--  Link to Login Screen -->
        <Button
            android:id="@+id/btnLinkToLoginScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:text="Already registred. Login" />
    </LinearLayout>
 
</ScrollView>


<LinearLayout 
    android:id="@+id/LinearLayout03" 
    android:layout_height="wrap_content" 
    android:layout_width="fill_parent"
    android:layout_alignParentBottom = "true">
    	<Button 
    	    android:id="@+id/back_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25" 
	        android:text="@string/back_button"
	        android:onClick="onClick">
	    </Button>
    	<Button 
    	    android:id="@+id/menu_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25" 
	        android:text="@string/home_button"
	        android:onClick="onClick">
	    </Button>
	    <Button 
	        android:id="@+id/map_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25" 
	        android:text="@string/map_view"
	        android:onClick="onClick">
	    </Button>
	    <Button 
	        android:id="@+id/list_button" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_weight=".25"
	        android:text="@string/list_view"
	        android:onClick="onClick">
	     </Button>
	</LinearLayout>
	</RelativeLayout>
	